tests/trybuild/separate_callsite_and_item_errors.stderr
error[E0308]: mismatched types
 --> tests/trybuild/separate_callsite_and_item_errors.rs:8:14
  |
8 |     let _: () = ResultType::try_from(0i32);
  |            --   ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `Result<i8, TryFromIntError>`
  |            |
  |            expected due to this
  |
  = note: expected unit type `()`
                  found enum `Result<i8, TryFromIntError>`
